<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:animateLayoutChanges="true">

    <TextView
        android:id="@+id/equationBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/digital_7_mono"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:gravity="end"
        android:paddingHorizontal="40dp"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/answerBar" />

    <TextView
        android:id="@+id/answerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autoSizeTextType="uniform"
        android:maxLines="1"
        android:fontFamily="@font/digital_7_mono"
        android:gravity="end"
        android:text=""

        android:textColor="@color/white"
        android:paddingHorizontal="40dp"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:columnCount="4"
        android:rowCount="5"
        android:background="@drawable/rect_grid_holder"
        android:backgroundTint="@color/grey5"
        android:useDefaultMargins="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.65"
        android:paddingTop="40dp">

        <TextView
            android:id="@+id/clearEquation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/clear_screen"
            android:fontFamily="@font/biko_bold"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/purple_200"/>

        <TextView
            android:id="@+id/plusMinusSymbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/plus_minus"
            android:fontFamily="@font/biko_bold"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/purple_200"/>

        <TextView
            android:id="@+id/percentSymbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="2"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/biko_bold"
            android:gravity="center"
            android:text="@string/percent"
            android:textColor="@color/purple_200"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/divideSymbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/divide"
            android:fontFamily="@font/biko_bold"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/purple_200"/>

        <TextView
            android:id="@+id/seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/seven"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/eight"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/nine"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/multiplySymbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/multiply"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="40sp"
            android:textColor="@color/purple_200"/>

        <TextView
            android:id="@+id/four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/four"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/five"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/six"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/minusSymbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/minus"
            android:fontFamily="@font/biko_bold"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/purple_200"/>

        <TextView
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/one"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/two"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/three"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/addSymbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/plus"
            android:fontFamily="@font/biko_bold"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/purple_200"/>

        <TextView
            android:id="@+id/reset"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/reset"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/zero"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/dot"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/dot"
            android:paddingBottom="10dp"
            android:paddingTop="0dp"
            android:fontFamily="@font/biko_regular"
            android:gravity="center"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/equalSymbol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnSpan="1"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:text="@string/equals"
            android:fontFamily="@font/biko_bold"
            android:gravity="center"
            android:textSize="30sp"
            android:textColor="@color/purple_200"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>